--- a/build.xml
+++ b/build.xml
@@ -166,7 +166,7 @@
               targetfile="${cacore.sdk.dir}/output/biobank2">
       <srcfiles file="sdk_conf/deploy.properties" />
       <srcfiles file="sdk_conf/build.properties" />
-      <srcfiles file="sdk_conf/validator-extension-Config.xml" />
+     <!-- <srcfiles file="sdk_conf/validator-extension-Config.xml" />-->
       <srcfiles file="sdk_conf/config.xml" />
       <srcfiles file="sdk_conf/application-config-client.xml" />
       <srcfiles file="model/biobank2.uml" />
@@ -178,13 +178,16 @@
     <copy file="sdk_conf/deploy.properties"
           tofile="${cacore.sdk.dir}/conf/deploy.properties" />
     <copy file="sdk_conf/build.properties" tofile="${cacore.sdk.dir}/build.properties" />
-    <copy file="sdk_conf/validator-extension-Config.xml" tofile="${cacore.sdk.dir}/conf/codegen/validator-extension-Config.xml" />
+    <!--<copy file="sdk_conf/validator-extension-Config.xml" tofile="${cacore.sdk.dir}/conf/codegen/validator-extension-Config.xml" />-->
     <copy file="sdk_conf/application-config.xml" tofile="${cacore.sdk.dir}/conf/system/web/WEB-INF/classes/application-config.xml" />
     <copy file="sdk_conf/application-config-client.xml" tofile="${cacore.sdk.dir}/conf/system/package/local-client/conf/application-config-client.xml" />
     <copy file="sdk_conf/application-config-client-info.xml" tofile="${cacore.sdk.dir}/conf/system/package/remote-client/conf/application-config-client-info.xml" />
     <copy file="sdk_conf/application-config-security.xml" tofile="${cacore.sdk.dir}/conf/system/web/WEB-INF/classes/application-config-security.xml" />
     <copy file="${req.jars.dir}/mysql-connector-java-5.1.7-bin.jar" tofile="${cacore.sdk.dir}/system/lib/mysql-connector-java-5.1.7-bin.jar" />
 	<delete file="${cacore.sdk.dir}/system/lib/mysql-connector-java-3.1.13-bin.jar"/>
+  	
+  	<!-- we want this file generated only if the sdk build is launched -->
+  	<ant target="validators" inheritRefs="false" />
 	<ant dir="${cacore.sdk.dir}" target="build-system" inheritRefs="false" />
   </target>
   <target name="log4j-conf">
@@ -488,14 +491,19 @@
     </java>
   </target>
 
-  <target name="build-validators" depends="sdk">
+  <target name="build-validators">
   	<echo message="Building hibernate validators generation tool" />
 	<mkdir dir="${eclipse.proj.dir.tools}/output" />
+    <copy includeemptydirs="false" todir="${eclipse.proj.dir.tools}/output">
+      <fileset dir="${eclipse.proj.dir.tools}/src">
+  	    <exclude name="**/*.launch" />
+  	    <exclude name="**/*.java" />
+      </fileset>
+    </copy>
 	<javac debug="on" debuglevel="source,lines,vars"
 	       destdir="${eclipse.proj.dir.tools}/output" source="1.6" target="1.6"
 	       includeantruntime="false">
-	  <src path="${eclipse.proj.dir.tools}/src" />
-	  <src path="${eclipse.proj.dir.common}/src" />
+	  <src path="${eclipse.proj.dir.tools}/src" />	  
 	  <include name="**/tools/validator/*.java" />
 	  <include name="**/tools/modelumlparser/*.java" />
 	  <include name="**/tools/utils/*.java" />
@@ -516,7 +524,7 @@
 	      failonerror="true" fork="true">
       <jvmarg value="-Dlog4j.configuration=file:${eclipse.proj.dir.tools}/conf/log4j.properties" />
 	  <arg value="${model.proj.dir}/biobank2.uml" />
-	  <arg value="/home/delphine/tmp/validator-test.xml" />
+	  <arg value="${cacore.sdk.dir}/conf/codegen/validator-extension-Config.xml" />
       <classpath>
     	<pathelement location="${req.jars.dir}/jargs.jar" />
       	<pathelement location="${req.jars.dir}/commons-io-1.4.jar" />
