--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ eclipse_ws/biobank2.importer/conf
 eclipse_ws/biobank2.importer/lib/*
 eclipse_ws/biobank2.tools/bin
 eclipse_ws/biobank2.tools/lib
+eclipse_ws/biobank2.tools/output
 eclipse_ws/biobank2.tests/bin
 eclipse_ws/biobank2.tests/build
 eclipse_ws/biobank2.tests/conf
