--- a/build.xml
+++ b/build.xml
@@ -692,11 +692,11 @@
 
 
   <!-- JUnit -->
-
-  <property name="dest.dir" value="${eclipse.proj.dir.junit}/build" />
-  <property name="dest.dir.classes" value="${dest.dir}/classes" />
-  <property name="dest.dir.results" value="testing" />
-  <property name="dest.dir.results.raw" value="${dest.dir.results}/raw" />
+	
+  <property name="test.output" location="testing" />
+  <property name="test.output.raw" value="${test.output}/raw" />
+  <property name="test.build.dir" value="${eclipse.proj.dir.junit}/build" />
+  <property name="test.build.dir.classes" value="${test.build.dir}/classes" />
   <path id="common.class.path">
     <fileset dir="${eclipse.proj.dir.common}/lib/client">
       <include name="*.jar" />
@@ -716,33 +716,33 @@
     </fileset>
   </path>
   <path id="test.class.path">
-    <pathelement location="${dest.dir.classes}" />
+    <pathelement location="${test.build.dir.classes}" />
   </path>
   <target name="tests-clean">
-    <delete dir="${dest.dir}" />
-    <delete dir="${dest.dir.results}" />
+    <delete dir="${test.build.dir}" />
+    <delete dir="${test.output}" />
   </target>
   <target name="prepare">
-    <mkdir dir="${dest.dir}" />
-    <mkdir dir="${dest.dir.classes}" />
-    <mkdir dir="${dest.dir.results}" />
-    <mkdir dir="${dest.dir.results.raw}" />
+    <mkdir dir="${test.build.dir}" />
+    <mkdir dir="${test.build.dir.classes}" />
+    <mkdir dir="${test.output}" />
+    <mkdir dir="${test.output.raw}" />
   </target>
   <target name="common-compile" depends="tests-clean,prepare,deploy-eclipse">
-    <copy includeemptydirs="false" todir="${dest.dir.classes}">
+    <copy includeemptydirs="false" todir="${test.build.dir.classes}">
       <fileset dir="${eclipse.proj.dir.common}/src">
   	<exclude name="**/*.launch" />
   	<exclude name="**/*.java" />
       </fileset>
     </copy>
     <javac srcdir="${eclipse.proj.dir.common}/src"
-           destdir="${dest.dir.classes}" debug="true" debuglevel="lines,source"
+           destdir="${test.build.dir.classes}" debug="true" debuglevel="lines,source"
            includeantruntime="false">
       <classpath refid="common.lib.class.path" />
     </javac>
   </target>
   <target name="tests-compile" depends="common-compile">
-    <javac srcdir="${eclipse.proj.dir.junit}/src" destdir="${dest.dir.classes}"
+    <javac srcdir="${eclipse.proj.dir.junit}/src" destdir="${test.build.dir.classes}"
            debug="true" debuglevel="lines,source" includeantruntime="false">
       <classpath refid="common.class.path" />
       <classpath refid="junit.class.path" />
@@ -755,8 +755,10 @@
       <classpath refid="application.config.class.path" />
       <classpath refid="common.lib.class.path" />
       <classpath refid="test.class.path" />
-      <formatter usefile="yes" type="brief" />
-      <batchtest todir="testing/raw">
+      <sysproperty key="server" value="${server}"/>
+      <formatter usefile="yes" type="xml" />
+      <test name="${testcase}" todir="${test.output.raw}" if="testcase"/>
+      <batchtest todir="${test.output.raw}" unless="testcase">
         <fileset dir="${eclipse.proj.dir.junit}/src">
           <include name="**/Test*.java" />
           <exclude name="edu/ualberta/med/biobank/test/speed/**" />
@@ -769,11 +771,11 @@
         <formatter type="xml" />
       </batchtest>
     </junit>
-    <junitreport todir="${dest.dir.results}">
-      <fileset dir="${dest.dir.results.raw}">
+    <junitreport todir="${test.output}">
+      <fileset dir="${test.output.raw}">
         <include name="TEST-*.xml" />
       </fileset>
-      <report format="noframes" todir="${dest.dir.results}/html" />
+      <report format="noframes" todir="${test.output}/html" />
     </junitreport>
     <echo message="test report: file://${test.output}/html/junit-noframes.html" />
   </target>
@@ -790,7 +792,7 @@
           description="executes test cases with code coverage">
     <delete file="${test.output}/coverage.emma" />
     <copy file="${eclipse.proj.dir.common}/src/edu/ualberta/med/biobank/common/reports/reports.properties"
-          tofile="${dest.dir.classes}/edu/ualberta/med/biobank/common/reports/reports.properties" />
+          tofile="${test.build.dir.classes}/edu/ualberta/med/biobank/common/reports/reports.properties" />
     <junit printsummary="yes" haltonfailure="no" showoutput="yes" fork="true">
       <classpath refid="junit.class.path" />
       <classpath refid="application.config.class.path" />
@@ -822,11 +824,11 @@
       <jvmarg value="-ix" />
       <jvmarg value="edu.ualberta.med.biobank.common*" />
     </junit>
-    <junitreport todir="${dest.dir.results}">
-      <fileset dir="${dest.dir.results.raw}">
+    <junitreport todir="${test.output}">
+      <fileset dir="${test.output.raw}">
         <include name="TEST-*.xml" />
       </fileset>
-      <report format="noframes" todir="${dest.dir.results}/html" />
+      <report format="noframes" todir="${test.output}/html" />
     </junitreport>
     <java classname="emma" fork="true">
       <arg value="report" />
