--- a/build.xml
+++ b/build.xml
@@ -695,8 +695,8 @@
 	
   <property name="test.output" location="testing" />
   <property name="test.output.raw" value="${test.output}/raw" />
-  <property name="test.build.dir" value="${eclipse.proj.dir.junit}/build" />
-  <property name="test.build.dir.classes" value="${test.build.dir}/classes" />
+  <property name="test.build.dir" value="${eclipse.proj.dir.junit}/output" />
+	
   <path id="common.class.path">
     <fileset dir="${eclipse.proj.dir.common}/lib/client">
       <include name="*.jar" />
@@ -716,52 +716,48 @@
     </fileset>
   </path>
   <path id="test.class.path">
-    <pathelement location="${test.build.dir.classes}" />
+    <pathelement location="${test.build.dir}" />
   </path>
+	
   <target name="tests-clean">
     <delete dir="${test.build.dir}" />
     <delete dir="${test.output}" />
   </target>
+	
   <target name="prepare">
     <mkdir dir="${test.build.dir}" />
-    <mkdir dir="${test.build.dir.classes}" />
     <mkdir dir="${test.output}" />
     <mkdir dir="${test.output.raw}" />
   </target>
-  <target name="common-compile" depends="tests-clean,prepare,deploy-eclipse">
-    <copy includeemptydirs="false" todir="${test.build.dir.classes}">
-      <fileset dir="${eclipse.proj.dir.common}/src">
-  	<exclude name="**/*.launch" />
-  	<exclude name="**/*.java" />
-      </fileset>
-    </copy>
-    <javac srcdir="${eclipse.proj.dir.common}/src"
-           destdir="${test.build.dir.classes}" debug="true" debuglevel="lines,source"
-           includeantruntime="false">
-      <classpath refid="common.lib.class.path" />
-    </javac>
-  </target>
-  <target name="tests-compile" depends="common-compile">
-    <javac srcdir="${eclipse.proj.dir.junit}/src" destdir="${test.build.dir.classes}"
+	
+  <target name="tests-compile" depends="build-common-project,prepare">
+    <javac srcdir="${eclipse.proj.dir.junit}/src" destdir="${test.build.dir}"
            debug="true" debuglevel="lines,source" includeantruntime="false">
-      <classpath refid="common.class.path" />
+      <classpath>
+        <pathelement location="${eclipse.proj.dir.common}/output" />
+        <pathelement location="${eclipse.proj.dir.common}/lib/client" />
+      </classpath>
       <classpath refid="junit.class.path" />
+      <classpath refid="biobank.common.classpath" />
     </javac>
   </target>
+	
   <target name="test" depends="tests-compile"
           description="executes test cases">
     <junit printsummary="yes" haltonfailure="no" showoutput="yes" fork="true">
+      <classpath>
+      	<pathelement location="${eclipse.proj.dir.common}/output" />
+      </classpath>
       <classpath refid="junit.class.path" />
       <classpath refid="application.config.class.path" />
-      <classpath refid="common.lib.class.path" />
       <classpath refid="test.class.path" />
-      <sysproperty key="server" value="${server}"/>
+      <classpath refid="biobank.common.classpath" />
       <formatter usefile="yes" type="xml" />
       <test name="${testcase}" todir="${test.output.raw}" if="testcase"/>
       <batchtest todir="${test.output.raw}" unless="testcase">
         <fileset dir="${eclipse.proj.dir.junit}/src">
           <include name="**/Test*.java" />
-          <exclude name="edu/ualberta/med/biobank/test/speed/**" />
+          <exclude name="**/speed/**" />
           <exclude name="**/TestCommon.java" />
           <exclude name="**/TestDatabase.java" />
           <exclude name="**/TestFunctionalities.java" />
@@ -779,31 +775,31 @@
     </junitreport>
     <echo message="test report: file://${test.output}/html/junit-noframes.html" />
   </target>
+	
   <property name="emma.dir" value="${req.jars.dir}" />
   <path id="emma.lib">
     <pathelement location="${emma.dir}/emma.jar" />
     <pathelement location="${emma.dir}/emma_ant.jar" />
   </path>
+	
   <target name="emma"
           description="turns on EMMA's on-the-fly instrumentation mode">
     <property name="emma.enabled" value="true" />
   </target>
+	
   <target name="test-emma" depends="tests-compile"
           description="executes test cases with code coverage">
     <delete file="${test.output}/coverage.emma" />
-    <copy file="${eclipse.proj.dir.common}/src/edu/ualberta/med/biobank/common/reports/reports.properties"
-          tofile="${test.build.dir.classes}/edu/ualberta/med/biobank/common/reports/reports.properties" />
     <junit printsummary="yes" haltonfailure="no" showoutput="yes" fork="true">
       <classpath refid="junit.class.path" />
       <classpath refid="application.config.class.path" />
-      <classpath refid="common.lib.class.path" />
+      <classpath refid="biobank.common.classpath" />
       <classpath refid="test.class.path" />
       <classpath refid="emma.lib" />
       <formatter usefile="yes" type="brief" />
-      <!--test name="test.ualberta.med.biobank.AllTests" haltonfailure="no" outfile="result">
       <formatter type="xml" />
-      </test-->
-      <batchtest todir="testing/raw">
+      <test name="${testcase}" todir="${test.output.raw}" if="testcase"/>
+      <batchtest todir="testing/raw" unless="testcase">
         <fileset dir="${eclipse.proj.dir.junit}/src">
           <include name="**/Test*.java" />
           <exclude name="edu/ualberta/med/biobank/test/speed/**" />
