--- a/build.xml
+++ b/build.xml
@@ -51,7 +51,7 @@
             value="commons-io-1.4.jar, jargs.jar,spiffy-all-0.05.jar,SuperCSV-1.52.jar,mysql-connector-java-5.1.7-bin.jar" />
   <property name="cacore.system.jar.files"
             value="commons-collections-3.2.jar,commons-logging-1.1.jar,hibernate-validator.jar" />
-<property name="converage.output" location="coverage" />
+  <property name="converage.output" location="coverage" />
   <condition property="perl" value="perl" else="/usr/bin/perl">
     <os family="windows" />
   </condition>
@@ -210,7 +210,7 @@
               targetfile="${cacore.sdk.dir}/output/biobank2">
       <srcfiles file="sdk_conf/deploy.properties" />
       <srcfiles file="sdk_conf/build.properties" />
-     <!-- <srcfiles file="sdk_conf/validator-extension-Config.xml" />-->
+      <!-- <srcfiles file="sdk_conf/validator-extension-Config.xml" />-->
       <srcfiles file="sdk_conf/config.xml" />
       <srcfiles file="sdk_conf/application-config-client.xml" />
       <srcfiles file="model/biobank2.uml" />
@@ -222,18 +222,24 @@
           description="builds the caCORE SDK from the data model">
     <copy file="sdk_conf/deploy.properties"
           tofile="${cacore.sdk.dir}/conf/deploy.properties" />
-    <copy file="sdk_conf/build.properties" tofile="${cacore.sdk.dir}/build.properties" />
+    <copy file="sdk_conf/build.properties"
+          tofile="${cacore.sdk.dir}/build.properties" />
     <!--<copy file="sdk_conf/validator-extension-Config.xml" tofile="${cacore.sdk.dir}/conf/codegen/validator-extension-Config.xml" />-->
-    <copy file="sdk_conf/application-config.xml" tofile="${cacore.sdk.dir}/conf/system/web/WEB-INF/classes/application-config.xml" />
-    <copy file="sdk_conf/application-config-client.xml" tofile="${cacore.sdk.dir}/conf/system/package/local-client/conf/application-config-client.xml" />
-    <copy file="sdk_conf/application-config-client-info.xml" tofile="${cacore.sdk.dir}/conf/system/package/remote-client/conf/application-config-client-info.xml" />
-    <copy file="sdk_conf/application-config-security.xml" tofile="${cacore.sdk.dir}/conf/system/web/WEB-INF/classes/application-config-security.xml" />
-    <copy file="${req.jars.dir}/mysql-connector-java-5.1.7-bin.jar" tofile="${cacore.sdk.dir}/system/lib/mysql-connector-java-5.1.7-bin.jar" />
-	<delete file="${cacore.sdk.dir}/system/lib/mysql-connector-java-3.1.13-bin.jar"/>
-  	
-  	<!-- we want this file generated only if the sdk build is launched -->
-  	<ant target="validators" inheritRefs="false" />
-	<ant dir="${cacore.sdk.dir}" target="build-system" inheritRefs="false" />
+    <copy file="sdk_conf/application-config.xml"
+          tofile="${cacore.sdk.dir}/conf/system/web/WEB-INF/classes/application-config.xml" />
+    <copy file="sdk_conf/application-config-client.xml"
+          tofile="${cacore.sdk.dir}/conf/system/package/local-client/conf/application-config-client.xml" />
+    <copy file="sdk_conf/application-config-client-info.xml"
+          tofile="${cacore.sdk.dir}/conf/system/package/remote-client/conf/application-config-client-info.xml" />
+    <copy file="sdk_conf/application-config-security.xml"
+          tofile="${cacore.sdk.dir}/conf/system/web/WEB-INF/classes/application-config-security.xml" />
+    <copy file="${req.jars.dir}/mysql-connector-java-5.1.7-bin.jar"
+          tofile="${cacore.sdk.dir}/system/lib/mysql-connector-java-5.1.7-bin.jar" />
+    <delete file="${cacore.sdk.dir}/system/lib/mysql-connector-java-3.1.13-bin.jar" />
+
+    <!-- we want this file generated only if the sdk build is launched -->
+    <ant target="validators" inheritRefs="false" />
+    <ant dir="${cacore.sdk.dir}" target="build-system" inheritRefs="false" />
   </target>
   <target name="log4j-conf">
     <copy file="security-logs/log4j.xml"
@@ -367,9 +373,9 @@
       <filelist dir="${req.jars.dir}" files="${biobank2.jar.files}" />
     </copy>
     <copy todir="${eclipse.proj.dir.importer}/lib">
-      <filelist dir="${req.jars.dir}" files="${biobank.importer.jar.files}"/>
-      <fileset file="${cacore.sdk.dir}/system/lib/log4j-1.2.14.jar"/>
-      <fileset file="${cacore.sdk.dir}/system/security/dist/sdk-security.jar"/>
+      <filelist dir="${req.jars.dir}" files="${biobank.importer.jar.files}" />
+      <fileset file="${cacore.sdk.dir}/system/lib/log4j-1.2.14.jar" />
+      <fileset file="${cacore.sdk.dir}/system/security/dist/sdk-security.jar" />
     </copy>
     <copy todir="${eclipse.proj.dir.tools}/lib">
       <filelist dir="${req.jars.dir}" files="${biobank.tools.jar.files}" />
@@ -379,7 +385,7 @@
                 files="biobank2-beans.jar" />
     </copy>
     <copy todir="${eclipse.proj.dir.tools}/lib">
-      <fileset file="${cacore.sdk.dir}/system/lib/log4j-1.2.14.jar"/>
+      <fileset file="${cacore.sdk.dir}/system/lib/log4j-1.2.14.jar" />
     </copy>
   </target>
   <!-- JBoss -->
@@ -521,6 +527,19 @@
 
   <target name="build-modelpeer" depends="sdk">
     <echo message="Building model peer tool" />
+    <dependset>
+      <srcfilelist dir="${cacore.sdk.dir}/output/biobank2/build/jar"
+                   files="biobank2-beans.jar" />
+      <targets>
+        <fileset dir="${eclipse.proj.dir.tools}/output">
+          <include name="**/tools/modelpeer/*.class" />
+          <include name="**/tools/modelumlparser/*.class" />
+          <include name="**/tools/utils/*.class" />
+          <include name="**/common/util/TypeReference.class" />
+          <include name="**/common/wrappers/Property.class" />
+        </fileset>
+      </targets>
+    </dependset>
     <mkdir dir="${eclipse.proj.dir.tools}/output" />
     <javac debug="on"
            debuglevel="source,lines,vars"
@@ -534,7 +553,7 @@
       <include name="**/tools/modelumlparser/*.java" />
       <include name="**/tools/utils/*.java" />
       <include name="**/common/util/TypeReference.java" />
-      <include name="**/common/wrappers.Property.java" />
+      <include name="**/common/wrappers/Property.java" />
       <classpath>
         <pathelement location="${req.jars.dir}/jargs.jar" />
         <pathelement location="${req.jars.dir}/commons-lang-2.4.jar" />
@@ -543,9 +562,16 @@
     </javac>
   </target>
 
+  <target name="check-run-modelpeer">
+    <uptodate property="modelpeer.uptodate"
+              srcfile="${cacore.sdk.dir}/output/biobank2/build/jar/biobank2-beans.jar"
+              targetfile="${eclipse.proj.dir.common}/src/edu/ualberta/med/biobank/common/peer/SitePeer.java" />
+  </target>
+
   <target name="modelpeer"
-          description="Builds wrapper peer classes based on UML logical model."
-          depends="build-modelpeer">
+          depends="build-modelpeer,check-run-modelpeer"
+          unless="modelpeer.uptodate"
+          description="Builds wrapper peer classes based on UML logical model.">
     <java classname="edu.ualberta.med.biobank.tools.modelpeer.ModelPeerBuilder"
           failonerror="true"
           fork="true">
@@ -561,29 +587,32 @@
   </target>
 
   <target name="build-validators">
-  	<echo message="Building hibernate validators generation tool" />
-	<mkdir dir="${eclipse.proj.dir.tools}/output" />
+    <echo message="Building hibernate validators generation tool" />
+    <mkdir dir="${eclipse.proj.dir.tools}/output" />
     <copy includeemptydirs="false" todir="${eclipse.proj.dir.tools}/output">
       <fileset dir="${eclipse.proj.dir.tools}/src">
-  	    <exclude name="**/*.launch" />
-  	    <exclude name="**/*.java" />
+        <exclude name="**/*.launch" />
+        <exclude name="**/*.java" />
       </fileset>
     </copy>
-	<javac debug="on" debuglevel="source,lines,vars"
-	       destdir="${eclipse.proj.dir.tools}/output" source="1.6" target="1.6"
-	       includeantruntime="false">
-	  <src path="${eclipse.proj.dir.tools}/src" />	  
-	  <include name="**/tools/validator/*.java" />
-	  <include name="**/tools/modelumlparser/*.java" />
-	  <include name="**/tools/utils/*.java" />
-	  <classpath>
-	  	<pathelement location="${req.jars.dir}/jargs.jar" />
-	  	<pathelement location="${req.jars.dir}/commons-io-1.4.jar" />
-	  	<pathelement location="${cacore.sdk.dir}/system/lib/log4j-1.2.14.jar" />
-	  </classpath>
-	</javac>
-  </target>	
-	
+    <javac debug="on"
+           debuglevel="source,lines,vars"
+           destdir="${eclipse.proj.dir.tools}/output"
+           source="1.6"
+           target="1.6"
+           includeantruntime="false">
+      <src path="${eclipse.proj.dir.tools}/src" />
+      <include name="**/tools/validator/*.java" />
+      <include name="**/tools/modelumlparser/*.java" />
+      <include name="**/tools/utils/*.java" />
+      <classpath>
+        <pathelement location="${req.jars.dir}/jargs.jar" />
+        <pathelement location="${req.jars.dir}/commons-io-1.4.jar" />
+        <pathelement location="${cacore.sdk.dir}/system/lib/log4j-1.2.14.jar" />
+      </classpath>
+    </javac>
+  </target>
+
   <target name="validators"
           description="create the validators xml file used by cacore to generate the source code"
           depends="build-validators">
@@ -591,8 +620,8 @@
           failonerror="true"
           fork="true">
       <jvmarg value="-Dlog4j.configuration=file:${eclipse.proj.dir.tools}/conf/log4j.properties" />
-	  <arg value="${model.proj.dir}/biobank2.uml" />
-	  <arg value="${cacore.sdk.dir}/conf/codegen/validator-extension-Config.xml" />
+      <arg value="${model.proj.dir}/biobank2.uml" />
+      <arg value="${cacore.sdk.dir}/conf/codegen/validator-extension-Config.xml" />
       <classpath>
         <pathelement location="${req.jars.dir}/jargs.jar" />
         <pathelement location="${req.jars.dir}/commons-io-1.4.jar" />
@@ -771,7 +800,6 @@
   <target name="clean"
           depends="tests-clean,clean-jars, clean-caCore"
           description="cleans caCORE SDK and deletes jars from eclipse projects">
-    <ant target="clean-jars" />
     <delete dir="${eclipse.proj.dir.common}/output" />
     <delete dir="${eclipse.proj.dir.tools}/output" />
   </target>
@@ -781,9 +809,9 @@
   </target>
 
 
-  <!-- JUnit -->  
-	
-	<property name="test.output" location="testing" />
+  <!-- JUnit -->
+
+  <property name="test.output" location="testing" />
   <property name="test.output.raw" value="${test.output}/raw" />
   <property name="test.build.dir" value="${eclipse.proj.dir.junit}/output" />
 
