--- a/build.xml
+++ b/build.xml
@@ -72,7 +72,7 @@
   </condition>
   <condition property="isHostCbsrTraining">
     <equals arg1="${host.name}"
-            arg2="cbsr-training.med.ualberta.ca"
+            arg2="cbsr-training"
             casesensitive="true"
             trim="true" />
   </condition>
@@ -347,7 +347,7 @@
     <fail unless="env.JBOSS_HOME" message="JBOSS_HOME environment variable not defined" />
   </target>
   <target name="deploy-jboss"
-          depends="jboss.home.env,sdk-files,package-webapp-orm,check-jboss-uptodate,hostAicmlMed,hostCbsr,hostLocal,server-manifest"
+          depends="jboss.home.env,sdk-files,package-webapp-orm,check-jboss-uptodate,hostAicmlMed,hostCbsr,hostCbsrTraining,hostLocal,server-manifest"
           description="deploys the caCORE SDK webapp to JBoss"
           unless="jboss.uptodate">
     <copy file="${secu-log.dir}/jboss/login-config.xml"
