--- a/build.xml
+++ b/build.xml
@@ -73,10 +73,17 @@
             casesensitive="true"
             trim="true" />
   </condition>
+  <condition property="isHostCbsrTraining">
+    <equals arg1="${host.name}"
+            arg2="cbsr-training.med.ualberta.ca"
+            casesensitive="true"
+            trim="true" />
+  </condition>
   <condition property="isHostLocal">
     <and>
       <isfalse value="${isHostAicmlMed}" />
       <isfalse value="${isHostCbsr}" />
+      <isfalse value="${isHostCbsrTraining}" />
     </and>
   </condition>
   <condition property="cacore.sdk.tar.available">
@@ -397,6 +404,11 @@
           overwrite="true" />
   </target>
   <target name="hostCbsr" if="isHostCbsr">
+    <copy file="${secu-log.dir}/jboss/${host.name}.keystore"
+          tofile="${env.JBOSS_HOME}/server/default/conf/biobank.keystore"
+          overwrite="true" />
+  </target>
+  <target name="hostCbsrTraining" if="isHostCbsrTraining">
     <copy file="${secu-log.dir}/jboss/${host.name}.keystore"
           tofile="${env.JBOSS_HOME}/server/default/conf/biobank.keystore"
           overwrite="true" />
@@ -827,11 +839,11 @@
     <pathelement location="${test.build.dir}" />
   </path>
 
-  <target name="clean-tests-results">
+  <target name="clean-test-results">
     <delete dir="${test.output}" />
   </target>
 
-  <target name="clean-tests" depends="clean-tests-results">
+  <target name="clean-tests" depends="clean-test-results">
     <delete dir="${test.build.dir}" />
   </target>
 
