fixed depend for product target

--- a/build.xml
+++ b/build.xml
@@ -961,7 +961,7 @@
   </target>
 
 
-  <target name="product" depends="eclipse.home.env">
+  <target name="product" depends="eclipse.home.env,build-common-project">
     <property name="buildDirectory" value="${product.dir}/buildDirectory" />
     <delete dir="${buildDirectory}" />
     <copy todir="${buildDirectory}/plugins/biobank2">
