model extender tool now generates wrapper base classes

--- a/build.xml
+++ b/build.xml
@@ -591,6 +591,7 @@
       <jvmarg value="-Dlog4j.configuration=file:${eclipse.proj.dir.tools}/conf/log4j.properties" />
       <arg value="${model.proj.dir}/biobank2.uml" />
       <arg value="${eclipse.proj.dir.common}/src/edu/ualberta/med/biobank/common/peer" />
+      <arg value="${eclipse.proj.dir.common}/src/edu/ualberta/med/biobank/common/wrappers/base" />
       <classpath>
         <pathelement location="${req.jars.dir}/jargs.jar" />
         <pathelement location="${cacore.sdk.dir}/system/lib/log4j-1.2.14.jar" />
